--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -35,12 +35,35 @@ h2 {
 	font-style: bold;
 }
 
+.about p {
+	font-size: 16px;
+	padding-top: 15px;
+}
+
+.signature p {
+	font-size: 20px;
+	font-family: "Nothing You Could Do", cursive, sans-serif;
+	text-align: right;
+
+}
+
+.contactForm {
+	display: block;
+	margin-left: 100px;
+}
+
+.contact p {
+	font-size: 18px;
+
+}
+
 .philosophy {
 	font-size: 25px;
 }
 
 .bulletPoints {
 	font-size: 16px;
+	margin-top: 20px;
 }
 
 .featured {
@@ -75,6 +98,11 @@ h2 {
 
 /* Media Queries ==================================== */ 
 
+@media(max-width: 1200px) {
+	.contactForm {
+		margin-left: 0px;
+	}
+}
 
 
 @media(max-width: 769px) {
