--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,10 +1,15 @@
-html {
+html { 
+  background: url(../img/nfBinHood3.jpeg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 	font: #775730;
 }
 
 body {
-	background-color: #fcfbf5;
-	color: ￼red;
+	/*background-color: #fcfbf5;*/
+	
 	font-family: "Open Sans", sans-serif;
 }
 
@@ -16,9 +21,21 @@ h3 {
 }
 
 /* Carousel
-======================================= */
-.item, .active, .carousel-inner {
-height: 400px;
+======================================= 
+.carousel {
+	height: 50%;
+}
+
+.carousel img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	min-width: 100%;
+	height: 750px;
+}
+
+.item .active .carousel-inner {
+	height: 124%;
 }
 
 .carousel-caption > h1 {
@@ -34,10 +51,34 @@ height: 400px;
 	border: #eae4d5;
 }
 
+*/
+
 #home {
-	margin-top: 40px;
+	margin-top: 245px;
+	background-color: #9E7B60;
+	opacity: 0.75;
 }
 
+#home h3 {
+	color:  #fcfbf5;
+	font-size: 32px;
+	margin: 5px;
+}
+
+#home h4 {
+	color:  #fcfbf5;
+	font-size: 24px;
+	margin: 5px;
+}
+
+
+.navbar .navbar-text {
+	color: #775730;
+}
+
+.navbar .navbar-nav > li > a {
+	color: #775730;
+}
 /* Section 
 ======================================= */
 #product  {
@@ -165,10 +206,28 @@ h2 {
 	border-radius: 20px 0px 20px 0px;
 }
 
+footer {
+	color: white;
+}
 
 /* Media Queries ==================================== */ 
 
+@media(max-width: 1350px) {
+	#home {
+		margin-top: 255px;
+	}
+}
+
+@media(max-width: 1250px) {
+	#home {
+		margin-top: 265px;
+	}
+}
+
 @media(max-width: 1200px) {
+	#home h3 {
+		font-size: 26px;
+	}
 	.contactForm {
 		margin-left: 0px;
 	}
@@ -186,6 +245,9 @@ h2 {
 }
 
 @media (max-width: 991px) {
+ #home {
+		margin-top: 275px;
+	}
 	#map-canvas {
 		width: 620px;
 	}
@@ -210,8 +272,11 @@ h2 {
 }
 
 @media(max-width: 767px) {
-	.carousel-inner {
-		height: 100%;
+	
+
+
+	#home {
+		margin-top: 230px;
 	}
 
 	.section-colored {
@@ -242,13 +307,39 @@ h2 {
 }
 
 @media (max-width: 665px) {
+	#home {
+		margin-top: 250px;
+	}
+
 	#map-canvas {
 		max-width: 100%;
 	}
 }
+
+@media (max-width: 575px) {
+
+	#home h3 {
+		font-size: 24px;
+	}
+}
+
+@media (max-width: 500px) {
+	#home {
+		margin-top: 160px;
+	}
+	#home h3 {
+		font-size: 20px;
+	}
+}
+
 @media (max-width: 321px) {
-	#myCarousel {
-		max-height: 350px;
+	html { 
+  background: url(../img/mtHood.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+	font: #775730;
 	}
 	#contactPage {
 		padding-left: 0px;
