--- a/jama2/css/main.css
+++ b/jama2/css/main.css
@@ -3,16 +3,11 @@ body {
 
 }
 
-/* MAIN PAGE LAYOUT ========================================================== */
+/* MAIN LAYOUT ========================================================== */
 
 h1 {
 	
 	padding-bottom: 50px;
-}
-
-h3 {
-	margin-left: auto;
-	margin-right: auto;
 }
 
 .box {
@@ -22,6 +17,7 @@ h3 {
 
 ul {
 	margin-top: 20px;
+	padding-left: 0px;
 }
 
 .save {
@@ -33,20 +29,23 @@ ul {
 }
 
 /* BUTTONS =================================================================== */
-.active {
-	color: red;
-}
+
 
 .done {
 	background-color: #B9CBE3;
 }
 
 .buttons {
-	margin: 20px;
 	background-color: #6B819E;
 	color: white;
 }
 
-.glyphicon-trash {
-	float: right;
+.button-bar {
+	width: 50px;
+	margin-top: 50px;
 }
+
+#saveModal {
+	margin-top: 20px;
+}
+
